--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   polr:
     build: .
     restart: always
+    ports:
+      - 8080:80
     environment:
       DB_HOST: database
       DB_DATABASE: polr
