--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
       DB_USERNAME: root
       DB_PASSWORD: root
       POLR_SETUP_RAN: 'true'
+      SETTING_PUBLIC_INTERFACE: 'true'
+      SETTING_SHORTEN_PERMISSION: 'false'
       POLR_BASE: 32
-      APP_ADDRESS: 172.21.0.2
+      APP_ADDRESS: 51.68.85.78:8080
     networks:
       - back
 
@@ -22,8 +24,8 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
-    volumes:
-      - /tmp/mysql/:/var/lib/mysql/
+    # volumes:
+      # - /tmp/mysql/:/var/lib/mysql/
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: polr
